adding graphql dependencies

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "dependencies": {
     "nuxt": "^2.15.0"
+  },
+  "devDependencies": {
+    "graphql": "^15.5.1",
+    "nuxt-graphql-request": "^4.0.0"
   }
 }
